2006-10-23  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jheora/YUVBuffer.java:
	(YUVBuffer.prepareRGBData):
	Catch Exceptions while doing color conversions. Fixes #283.

	* src/com/fluendo/player/Cortado.java: (Cortado..handleMessage):
	Don't overwrite error messages.

	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.buildMultipart), (CortadoPipeline.cleanup):
	Post an error when the media type cannot be found.

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.Pad):
	Post an error when streaming stops.

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado..handleMessage):
	Make sure we never overwrite error messages. Fixes #351.

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* README:
	Add showStatus param

	* src/com/fluendo/player/Cortado.java: (Cortado),
	(Cortado..getParameterInfo), (Cortado..getParam),
	(Cortado..shutdown), (Cortado.), (Cortado..init),
	(Cortado..realRun), (Cortado..paint), (Cortado..setStatusVisible),
	(Cortado..intersectStatus), (Cortado..mouseClicked),
	(Cortado..mouseEntered), (Cortado..mouseExited),
	(Cortado..mousePressed), (Cortado..mouseReleased),
	(Cortado..mouseDragged), (Cortado..mouseMoved),
	(Cortado..handleMessage), (Cortado..newState):
	Add showStatus param.
	Handle hiding/showing of status area based on param. Fixes #389.

	* src/com/fluendo/player/Status.java: (Status.setState):
	Don't error out when the statusbar is invisible when we hover over it.

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* README:
	Add new properties to README

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado),
	(Cortado.handleMessage):
	Handle errors a bit better.

	* src/com/fluendo/player/CortadoPipeline.java: (CortadoPipeline),
	(CortadoPipeline.padAdded), (CortadoPipeline.cleanup):
	Do some more cleanups.

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pipeline.java: (Pipeline),