@@ -232,3 +232,11 @@ using javascript:
  </body>
 </html>
 
+The applet can be controlled with the following javascript methods:
+
+  doPlay(): Start playback
+  doPause(): Pause playback
+  doStop(): Stop playback
+  doSeek(double pos); seek to a new position, must be between 0.0 and 1.0.
+
+
